# icon_mcp

./: .gitignore  _repro.py  mcp_add.cmd  mcp_remove.cmd  pyproject.toml  run.py  runwin.cmd  test_mcp.py  清除.cmd
src/icon_mcp/: __main__.py  config.py  server.py
src/icon_mcp/lang/: en.py  zh_cn.py
src/icon_mcp/utils/: raster.py  saver.py  web_server.py
src/icon_mcp/web/: interface.py
