[project]
name = "icon-mcp"
version = "1.0.0"
description = "MCP Icon server for searching and fetching icons from iconfont.cn"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "gocronx"}
]
keywords = ["mcp", "icon", "server", "iconfont", "svg", "model-context-protocol"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "svglib>=1.5.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icon_mcp"]
